#53 refactor(sonar): replace `Stream.collect(Collectors.toList())` with `Stream.toList()`